<?xml version="1.0"?>
<package>
  <name>rm_75_robot</name>
  <version>1.0.0</version>
  <description>
	Description,drivers, control, gazebo, msgs, demo, moveit and utilities for RM-75 Robot Arms.
  </description>

  <author email="gubishan@realman-robot.com">Gu Bishan</author>
  <maintainer email="gubishan@realman-robot.com">Gu Bishan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rm_75_bringup</run_depend>
  <run_depend>rm_75_control</run_depend>
  <run_depend>rm_75_description</run_depend>
  <run_depend>rm_75_driver</run_depend>
  <run_depend>rm_75_gazebo</run_depend>
  <run_depend>rm_75_moveit_config</run_depend>
  <run_depend>rm_75_msgs</run_depend>
    <run_depend>rm_75_demo</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <metapackage/>
  </export>
</package>
